# AnimeUpscaler

./: .gitmodules  CMakeLists.txt  README.md  app.manifest
src/: main.cpp
src/app/: App.cpp  App.h
src/config/: Config.cpp  Config.h
src/ui/: MainFrame.cpp  MainFrame.h
src/utils/: GpuDetect.cpp  GpuDetect.h  PathUtils.cpp  PathUtils.h  Process.cpp  Process.h
src/video/: Video.cpp  Video.h  VideoLoader.cpp  VideoLoader.h  VideoProcessor.cpp  VideoProcessor.h
